--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 bevy = { version = "0.8.1", features = ["dynamic"] }
 bevy_prototype_lyon = "0.6.0"
-bevy_rapier2d = { version = "0.16.2", features = ["simd-nightly"] }
+bevy_rapier2d = { version = "0.16.2", features = ["simd-nightly", "debug-render"] }
 
 [profile.dev]
 opt-level = 1
